overflow fixing in progress

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,10 @@
 
 /***Body***/
 
+* {
+    outline: 1px solid red;
+}
+
 html,
 body {
 	margin: 0;
